--- a/Eunoia-Editor/imgui.ini
+++ b/Eunoia-Editor/imgui.ini
@@ -38,13 +38,13 @@ Collapsed=0
 
 [Window][Game]
 Pos=482,134
-Size=1375,581
+Size=997,592
 Collapsed=0
-DockId=0x00000011,0
+DockId=0x00000012,0
 
 [Window][Asset Browser]
-Pos=482,717
-Size=1375,340
+Pos=482,728
+Size=1375,329
 Collapsed=0
 DockId=0x00000014,0
 
@@ -94,28 +94,36 @@ Size=480,428
 Collapsed=0
 DockId=0x00000010,1
 
+[Window][Renderers]
+Pos=1481,134
+Size=376,592
+Collapsed=0
+DockId=0x00000018,0
+
 [Docking][Data]
-DockSpace                 ID=0x9252E5A2 Window=0x886E2B66 Pos=0,24 Size=1857,1033 Split=Y
-  DockNode                ID=0x00000001 Parent=0x9252E5A2 SizeRef=1264,108 Selected=0xA8265FA6
-  DockNode                ID=0x00000002 Parent=0x9252E5A2 SizeRef=1264,923 Split=X
-    DockNode              ID=0x00000003 Parent=0x00000002 SizeRef=946,598 Split=X
-      DockNode            ID=0x00000007 Parent=0x00000003 SizeRef=188,598
-      DockNode            ID=0x00000008 Parent=0x00000003 SizeRef=756,598 Split=X
-        DockNode          ID=0x00000009 Parent=0x00000008 SizeRef=0,598 Split=X
-          DockNode        ID=0x0000000D Parent=0x00000009 SizeRef=277,912 Selected=0xFBB63E47
-          DockNode        ID=0x0000000F Parent=0x00000009 SizeRef=985,912 Split=X
-            DockNode      ID=0x0000000E Parent=0x0000000F SizeRef=1332,672 Split=X Selected=0x83199EB2
-              DockNode    ID=0x00000016 Parent=0x0000000E SizeRef=480,630 Split=Y Selected=0x9A68760C
-                DockNode  ID=0x00000010 Parent=0x00000016 SizeRef=404,428 Selected=0x9A68760C
-                DockNode  ID=0x00000015 Parent=0x00000016 SizeRef=404,493 Selected=0xAE10E12E
-              DockNode    ID=0x00000017 Parent=0x0000000E SizeRef=1375,630 Split=Y Selected=0x83199EB2
-                DockNode  ID=0x00000011 Parent=0x00000017 SizeRef=1293,581 CentralNode=1 Selected=0x83199EB2
-                DockNode  ID=0x00000014 Parent=0x00000017 SizeRef=1293,340 Selected=0xB04EBF39
-            DockNode      ID=0x00000013 Parent=0x0000000F SizeRef=523,672 Selected=0x9A68760C
-        DockNode          ID=0x0000000A Parent=0x00000008 SizeRef=754,598 Split=Y
-          DockNode        ID=0x0000000B Parent=0x0000000A SizeRef=722,476
-          DockNode        ID=0x0000000C Parent=0x0000000A SizeRef=722,120
-    DockNode              ID=0x00000004 Parent=0x00000002 SizeRef=316,598 Split=X
-      DockNode            ID=0x00000005 Parent=0x00000004 SizeRef=235,598
-      DockNode            ID=0x00000006 Parent=0x00000004 SizeRef=79,598
+DockSpace                   ID=0x9252E5A2 Window=0x886E2B66 Pos=0,24 Size=1857,1033 Split=Y
+  DockNode                  ID=0x00000001 Parent=0x9252E5A2 SizeRef=1264,108 Selected=0xA8265FA6
+  DockNode                  ID=0x00000002 Parent=0x9252E5A2 SizeRef=1264,923 Split=X
+    DockNode                ID=0x00000003 Parent=0x00000002 SizeRef=946,598 Split=X
+      DockNode              ID=0x00000007 Parent=0x00000003 SizeRef=188,598
+      DockNode              ID=0x00000008 Parent=0x00000003 SizeRef=756,598 Split=X
+        DockNode            ID=0x00000009 Parent=0x00000008 SizeRef=0,598 Split=X
+          DockNode          ID=0x0000000D Parent=0x00000009 SizeRef=277,912 Selected=0xFBB63E47
+          DockNode          ID=0x0000000F Parent=0x00000009 SizeRef=985,912 Split=X
+            DockNode        ID=0x0000000E Parent=0x0000000F SizeRef=1332,672 Split=X Selected=0x83199EB2
+              DockNode      ID=0x00000016 Parent=0x0000000E SizeRef=480,630 Split=Y Selected=0x9A68760C
+                DockNode    ID=0x00000010 Parent=0x00000016 SizeRef=404,428 Selected=0x85C817C3
+                DockNode    ID=0x00000015 Parent=0x00000016 SizeRef=404,493 Selected=0xAE10E12E
+              DockNode      ID=0x00000017 Parent=0x0000000E SizeRef=1375,630 Split=Y Selected=0x83199EB2
+                DockNode    ID=0x00000011 Parent=0x00000017 SizeRef=1293,592 Split=X Selected=0x83199EB2
+                  DockNode  ID=0x00000012 Parent=0x00000011 SizeRef=997,667 CentralNode=1 Selected=0x83199EB2
+                  DockNode  ID=0x00000018 Parent=0x00000011 SizeRef=376,667 Selected=0x60B70B66
+                DockNode    ID=0x00000014 Parent=0x00000017 SizeRef=1293,329 Selected=0xB04EBF39
+            DockNode        ID=0x00000013 Parent=0x0000000F SizeRef=523,672 Selected=0x9A68760C
+        DockNode            ID=0x0000000A Parent=0x00000008 SizeRef=754,598 Split=Y
+          DockNode          ID=0x0000000B Parent=0x0000000A SizeRef=722,476
+          DockNode          ID=0x0000000C Parent=0x0000000A SizeRef=722,120
+    DockNode                ID=0x00000004 Parent=0x00000002 SizeRef=316,598 Split=X
+      DockNode              ID=0x00000005 Parent=0x00000004 SizeRef=235,598
+      DockNode              ID=0x00000006 Parent=0x00000004 SizeRef=79,598
 
